# next-yak

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  CONTRIBUTION.md  NOTICE.md  README.md  RELEASE.md  SECURITY.md  holistic-performance-analyze-for-next-yak-vs-styled-components.md  jsx-fold-cases.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: afraid-eagles-grab.md  afraid-llamas-change.md  big-teams-yawn.md  breezy-carpets-hammer.md  breezy-hotels-say.md  breezy-humans-wear.md  bright-pandas-hide.md  build-eslint-plugin-yak.md  bump-ci-actions-node24.md  calm-dingos-call.md  chatty-fans-drop.md  chilly-clowns-drum.md  clean-plums-burn.md  cold-humans-matter.md  config.json  cozy-dingos-taste.md  cssprop-classname-decoding.md  cssprop-constant-folding.md  cssprop-spread-props.md  cssprop-style-reference-error.md  curly-cougars-clean.md  dark-moles-peel.md  dark-otters-jump.md  drop-classname-dedup.md  drop-empty-css-prop.md  dry-heads-listen.md  easy-lies-feel.md  eleven-rooms-take.md  empty-bottles-study.md  fair-shoes-hope.md  famous-papers-look.md  few-goats-smell.md  fiery-moons-learn.md  five-cows-sort.md  five-nails-switch.md  fix-runtime-member-expression.md  flat-eggs-relax.md  fluffy-otters-brush.md  fold-classname-byte-exact.md  four-clocks-remain.md  (+57 more)
.claude/: settings.local.json
.github/: preview-template.md  zizmor.yml
.github/workflows/: autofix-commit.yml  autofix.yml  benchmarks.yml  changeset.yml  codspeed.yml  docs-deploy.yml  (+19 more)
benchmarks/: .gitignore  README.md  holistic-performance-analyze-for-next-yak-vs-styled-components.md  next.config.ts  package.json  tsconfig.json
cross-file-tests/: package.json
docs/: README.md  next.config.mjs  package.json  tsconfig.json
docs-vnext/: .gitignore  next.config.ts  package.json  source.config.ts  tsconfig.json
docs/playground-wasm/: Cargo.toml
docs/playground-wasm/src/: lib.rs  types.rs
e2e/: .gitignore  README.md  e2eEnvironment.ts  package.json  playwright-base.ts  run.ts  runBuildTests.ts  runDevTests.ts  test-env.ts  tsconfig.json
scripts/: build-snapshot-release-notes.mts
(+429 files in other folders)
