[package]
name = "playground-wasm"
version = "0.1.0"
edition = "2021"
workspace = "../../packages/yak-swc"

[lib]
crate-type = ["cdylib"]

[features]
# required by the swc macros; should not be enabled
__plugin = []

[dependencies]
anyhow = "1.0.103"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.103"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
# enable the js flag for the getrandom transitive dependency
# (pinned to 0.3 so it unifies with the copy pulled in via swc_core/ahash;
# a wider range would resolve to a newer major and split the dependency,
# leaving the transitive copy without the wasm_js feature)
getrandom = { version = "0.3", features = ["wasm_js"] }
swc_core = { workspace = true, features = [
  "ecma_ast_serde",
  "binding_macro_wasm",
  "ecma_transforms_module",
  "base_module",
] }
wasm-bindgen = "0.2.126"
yak_swc = { version = "0.1.0", path = "../../packages/yak-swc/yak_swc", default-features = false }
either = "1.16.0"
tsify = "0.5.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
